--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,30 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>
-      {% block title %}{% endblock %}
-    </title>
 
-    {% block head %}{% endblock %}
+  	<title>{% block title %}{% endblock %}</title>
+
+  	 <!-- We'll load React dependencies on all pages for this app. -->
+
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js" crossorigin></script>
+ 	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  	<script 
+  	src="http://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+
+
   </head>
   <body>
-    {% for msg in get_flashed_messages() %}
-      <p class="flash-msg">
-        {{ msg }}
-      </p>
-    {% endfor %}
-    
-    {% block body %}{% endblock %}
+  	<h1>Welcome to School Board!</h1>
 
-    {% block after_body %}{% endblock %}
-  </body>
+  <!-- Include the page's content with this block. -->
+  {% block body %}{% endblock %}
+
+  <!-- Include any page-specific Javascript using this block. -->
+  {% block js %}{% endblock %}
+</body>
 </html>
+
+
