form adds college to database

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-	<h2>Start by adding a school</h2>
+	<h2>Let's add some schools</h2>
 
 	<form id="college-form" >
 		<label>College: </label>
@@ -11,9 +11,12 @@
 	    	<input type="submit">
 	  </form>
 
+	<div id="college-result"> 
+	</div>
+
 {% endblock %}
 
-{% block js %}<script src="/static/js/schoolboard.js"></script>{% endblock %}
+{% block js %}<script src="/static/js/college.js"></script>{% endblock %}
 
 
 
