--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,6 +5,10 @@
 
 	<h2>Let's add some schools</h2>
 
+	<ul>
+		<li><a href="/mycolleges">View all of my colleges</a></li>
+	</ul>
+
 	<form id="college-form" >
 		<label>College: </label>
 			<input type="text" id="college">
@@ -20,7 +24,7 @@
 
 
 
-<!-- {% if 'user_id' not in session %}
+<!-- {% if 'user_id' not in session %} -->
 	<h2>Create an Account</h2>
 	<form action="/users" method="POST">
 		<p>
@@ -47,4 +51,4 @@
 		</p>
 	</form>
 
-{% endif %} -->
+{% endif %}
