--- a/templates/my_colleges.html
+++ b/templates/my_colleges.html
@@ -5,7 +5,7 @@
 
 <h>hello</h>
 {% for college in colleges %}
-	<div> {{user_college.name}} </div>
+	<div> {{user_program.name}} </div>
 
 {% endfor %}
 
