--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,10 @@
   	src="http://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-
+    
+    <script src='/static/js/Prerequisite.jsx' type="text/jsx"></script>
+    <script src='/static/js/Program.jsx' type="text/jsx"></script>
+    <script src='/static/js/Homepage.jsx' type="text/jsx"></script>
 
   </head>
   <body>
