created user login and registration in front end

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,6 +3,7 @@
 {% block title %}Homepage{% endblock %}
 
 {% block body %}
+    <h1>Welcome to Schoolboard</h1>
     <div id="app"></div>
 {% endblock %}
 
