--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
  	  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     
+    <script src="https://unpkg.com/react-router/umd/react-router.min.js" ></script>
+    <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js" ></script>
+
     <!-- <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script> -->
@@ -19,7 +22,7 @@
     <script src='/static/js/Prerequisite.jsx' type="text/jsx"></script>
     <script src='/static/js/Program.jsx' type="text/jsx"></script>
     <script src='/static/js/User.jsx' type="text/jsx"></script>
-    <script src='/static/js/Homepage.jsx' type="text/jsx"></script>
+    <script src='/static/js/App.jsx' type="text/jsx"></script>
 
 
     <link href="/static/css/site.css" rel="stylesheet">
