--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,6 +8,6 @@
 {% endblock %}
 
 {% block js %}
-	<script src="static/js/Homepage.jsx" type="text/jsx"></script>
+	<script src="static/js/App.jsx" type="text/jsx"></script>
 	
 {% endblock %}
