--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     
     <script src="https://unpkg.com/react-router/umd/react-router.min.js" ></script>
     <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js" ></script>
-
+    <script src="https://unpkg.com/"></script>
     <!-- <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script> -->
