non working map component

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,16 @@
     <script src='/static/js/Program.jsx' type="text/jsx"></script>
     <script src='/static/js/User.jsx' type="text/jsx"></script>
     <script src='/static/js/App.jsx' type="text/jsx"></script>
+    <script src="/static/js/Map.jsx" type="text/jsx" ></script>
 
 
     <link href="/static/css/site.css" rel="stylesheet">
+<!-- 
+    <script
+    async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ0lKLQYES7sfIlMlIaH_pCWUrP0PoPO8&callback=initmap">
+    </script> -->
+
   </head>
 
   <body>
