--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script> -->
 
   	<script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ0lKLQYES7sfIlMlIaH_pCWUrP0PoPO8"></script>
     <script src='/static/js/Prerequisite.jsx' type="text/jsx"></script>
     <script src='/static/js/Program.jsx' type="text/jsx"></script>
     <script src="/static/js/Map.jsx" type="text/jsx" ></script>
