--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,12 +1,25 @@
+.app-not-logged-in {
+  font-family: 'Playfair Display', serif;
+  /* font-family: 'Helvetica', sans-serif; */
+  color:white;
+  background-image: url("/static/img/background.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-blend-mode: lighten;
+}
+
+.container {
+  min-height: 100%;
+}
+
 body {
-    font-family: 'Playfair Display', serif;
-    /* font-family: 'Helvetica', sans-serif; */
-    color:white;
-    background-image: url("/static/img/background.jpg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-  
-  }
+  height: 100%;
+}
+
+.fill {
+  min-height: 100%;
+  height: 100%;
+}
 
 img {
   opacity: 0.5;
