--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,8 +3,7 @@
 {% block title %}Homepage{% endblock %}
 
 {% block body %}
-    <h1>Welcome to Schoolboard</h1>
-    <div id="app"></div>
+    <div id="app" class="container-fluid"></div>
 {% endblock %}
 
 {% block js %}
