greets user lastname

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
   <head>
 
     <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" type="image/png" href="/static/img/favicon.png"/>
 
   	<!-- We'll load React dependencies on all pages for this app. -->
 
