--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,3 +1,7 @@
+.container-fluid {
+  background-color:black;
+
+}
 .app-not-logged-in {
   font-family: 'Playfair Display', serif;
   /* font-family: 'Helvetica', sans-serif; */
@@ -5,31 +9,31 @@
   background-image: url("/static/img/background.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
-  background-blend-mode: lighten;
 }
 
-.container {
+.app-logged-in {
+  font-family: 'Playfair Display', serif;
+  color:white;
+  background-image: url("/static/img/background2.png");
+}
+/* .container {
   min-height: 100%;
-}
+} */
 
-body {
+/* body {
   height: 100%;
-}
+} */
 
-.fill {
+/* .fill {
   min-height: 100%;
   height: 100%;
-}
+} */
 
-img {
-  opacity: 0.5;
-}
+
 
 h1 {
   text-align: center;
+  /* background-color:gray; */
 }
 
-.login-form {
-  align-content: center;
-}
 
