--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Homepage{% endblock %}
+{% block title %}Schoolboard{% endblock %}
 
 {% block body %}
     <div id="app" class="container-fluid"></div>
